frontend-90: - z-index fix (will be fixed in separate branch)

--- a/frontend/src/components/notification-dropdown/styles.module.scss
+++ b/frontend/src/components/notification-dropdown/styles.module.scss
@@ -9,7 +9,6 @@
 
 .wrapper {
   position: relative;
-  z-index: 15;
 }
 
 .bell,
